creating landing page

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,3 @@
-{{template "base" .}}
 
 {{define "login.html"}}
        <!DOCTYPE html>
@@ -12,9 +11,7 @@
         <title>Document</title>
        </head>
        <body>
-        Web page
+        LoginWeb page
        </body>
        </html>
-
-
 {{end}}  
