--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
                                         <span class="d-none d-sm-inline mx-1">User</span>
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-                                        <li><a class="dropdown-item" href="#">New project...</a></li>
+                                        <li><a class="dropdown-item" href="/post-content">Create Post</a></li>
                                         <li><a class="dropdown-item" href="#">Settings</a></li>
                                         <li><a class="dropdown-item" href="#">Profile</a></li>
                                         <li>
@@ -107,14 +107,21 @@
                         <div class="container-fluid">
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
+                            <a href="/search" class="btn btn-outline-success" type="submit">Search</a>
                         </form>
-                        </div>
                     </nav>
                     Content area...
+
+                    <div class="card" style="width: 30rem; height: 20rem;">
+                        <img src="static/images/lady-writing.jpg" class="card-img-top" alt="lady writing">
+                        <div class="card-body">
+                          <h5 class="card-title">View Posts</h5>
+                          <p class="card-text">Click Below to View Content</p>
+                          <a href="/get-contents" class="btn btn-primary">View Content</a>
+                        </div>
+                      </div>
                 </div>
-            </div>
-        </div>
+            
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
