--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,9 +11,14 @@
     </head>
     
     <body>
-        <div class="text-bg-secondary p-3 text-center">Content WebApp</div>
+        <div class="text-bg-primary p-3 text-center">Content WebApp</div>
                 <h1 class="text-center">SignUp Here</h1>
 
+
+                <div >
+                    <a href="/" type="button" class="btn btn-dark" >Home</a>
+                </div>
+                
 
                 <form>
                     <div class="row mb-3">
@@ -25,12 +30,15 @@
 
                     <div class="row mb-3">
                       <label for="inputPassword3" class=" text-center  col-sm-2 col-form-label"><h4>Password</h4></label>
-                      <div class="col-lg-10">
+                      <div class="col-10">
                         <input type="password" class="form-control" id="inputPassword3" required>
                       </div>
                     </div>
-                      
-                    <button type="submit" class="btn btn-primary">Sign in</button>
+
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary text-lg-center">Sign In</button>
+
+                    </div>
                   </form>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
