--- a/templates/home.html
+++ b/templates/home.html
@@ -55,7 +55,7 @@
                                {{end}} 
                             </li> 
         
-                               
+<!--                                
                             <li>
                                 <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
                                     <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Dashboard</span> </a>
@@ -94,14 +94,12 @@
                                     <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Customers</span> </a>
                             </li>
                         </ul>
-                        <hr>
+                        <hr>-->
                       
-                    </div>
+                    </div> 
                 </div>
                 <div class="col py-3">  
                     <!-- beside the sidebar -->
-
-               
                        Search For Contents Here
                     <nav class="navbar bg-light">
                         <div class="container-fluid">
@@ -110,17 +108,33 @@
                             <a href="/search" class="btn btn-outline-success" type="submit">Search</a>
                         </form>
                     </nav>
-                    Content area...
+           
+                    <div>
+                        Content Area 
+                    </div>
 
-                    <div class="card" style="width: 30rem; height: 20rem;">
+                <div class="card" style="width: 30rem; height: 20rem; float:right;">
                         <img src="static/images/lady-writing.jpg" class="card-img-top" alt="lady writing">
-                        <div class="card-body">
-                          <h5 class="card-title">View Posts</h5>
-                          <p class="card-text">Click Below to View Content</p>
-                          <a href="/get-contents" class="btn btn-primary">View Content</a>
-                        </div>
-                      </div>
-                </div>
+                       
+                </div> 
+
+                  <style>
+                    .card{
+                        width: 700px;
+                    }
+                  </style>
+                 
+                    <div class="card"   >
+                        <img src="static/images/woman-writing.jpg"    alt="woman-writing">
+                      </div> 
+
+                      <div class="card-body">
+                        <h5 class="card-title">View Posts</h5>
+                        <p class="card-text">Click Below to View Content</p>
+                        <a href="/get-contents" class="btn btn-primary">View Content</a>
+                    </div>
+
+                   
             
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
