--- a/templates/signup.html
+++ b/templates/signup.html
@@ -35,6 +35,13 @@
                       </div>
                     </div>
 
+                    <div class="row mb-3">
+                      <label for="confirmpassword3" class=" text-center  col-sm-2 col-form-label"><h4>Confirm Password</h4></label>
+                      <div class="col-10">
+                        <input type="password" class="form-control" id="confirmpassword3" required>
+                      </div>
+                    </div>
+
                     <div class="text-center">
                         <button type="submit" class="btn btn-primary text-lg-center">Sign In</button>
 
