--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,42 +12,60 @@
     
     <body>
         <div class="text-bg-primary p-3 text-center">Content WebApp</div>
-                <h1 class="text-center">SignUp Here</h1>
 
+        <div class="container">
+           <div class="row">
+             <div class="col">
+                <h1 >SignUp Here</h1>
 
                 <div >
                     <a href="/" type="button" class="btn btn-dark" >Home</a>
                 </div>
                 
+                <form method="post" action="/signup" novalidate> <!--no validate wont validate until the parameters based in forms.go (email) are met  -->
+                  <!-- <input type="hidden" name="csrf_token" value="{{.CSRFToken}}"> -->
+                  <div class="form-group mt-3">
+                      <label for="email">Email:</label>
+                      {{with .Form.Errors.Get "email"}}   <!--with is a golang template directive ,this  gets access to the errors object from the forms.go -->
+                          <label class="text-danger">{{.}}</label>
+                      {{end}}
+                      <input class="form-control {{with .Form.Errors.Get "email"}} is-invalid {{end}}"
+                             id="email" autocomplete="off" type='email'
+                             name='email' value="" required>
+                  </div>
+      
+                  <div class="form-group ">
+                      <label for="password">Password:</label>
+                      {{with .Form.Errors.Get "password"}}   <!--with is a golang template directive ,this  gets access to the errors object from the forms.go -->
+                          <label class="text-danger">{{.}}</label>
+                      {{end}}
+                      <input class="form-control {{with .Form.Errors.Get "password"}} is-invalid {{end}}"
+                             id="password" autocomplete="off" type='password'
+                             name='password' value="" required>
+                  </div>
 
-                <form>
-                    <div class="row mb-3">
-                      <label for="inputEmail3" class=" text-center  col-sm-2 col-form-label"><h4>Email</h4></label>
-                      <div class="col-10">
-                        <input type="email" class="form-control " id="inputEmail3" required>
-                      </div>
-                    </div>
+                  <hr>
+                  <!--submit button-->
+                     <input type="submit" class="btn btn-primary" value="SignUp">
+                   </form>
 
-                    <div class="row mb-3">
-                      <label for="inputPassword3" class=" text-center  col-sm-2 col-form-label"><h4>Password</h4></label>
-                      <div class="col-10">
-                        <input type="password" class="form-control" id="inputPassword3" required>
-                      </div>
-                    </div>
+                </div>
+              </div>
+          </div>
 
-                    <!-- <div class="row mb-3">
-                      <label for="confirmpassword3" class=" text-center  col-sm-2 col-form-label"><h4>Confirm Password</h4></label>
-                      <div class="col-10">
-                        <input type="password" class="form-control" id="confirmpassword3" required>
-                      </div> -->
-                    </div>
+          {{block "js" .}}
+          {{end}}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
 
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary text-lg-center">Sign In</button>
+        {{with .Error}}
+        notify("{{.}}","error")
+        {{end}}
 
-                    </div>
-                  </form>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+        {{with .Flash}}
+        notify("{{.}}", "success")
+        {{end}}
+        
+        </script>
     </body>
     </html>
 
