--- a/templates/login.html
+++ b/templates/login.html
@@ -6,12 +6,75 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SignIn</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <title>Document</title>
+        
        </head>
+
        <body>
-        LoginWeb page
+        
+              
+        <div class="container">
+              <div class="row">
+                <div class="col">
+                   <h1 >Login Here</h1>
+   
+                   <div >
+                       <a href="/" type="button" class="btn btn-dark" >Home</a>
+                   </div>
+                   
+                   <form method="post" action="/signup" novalidate> <!--no validate wont validate until the parameters based in forms.go (email) are met  -->
+                       <input type="hidden" name="csrf_token" value="{{.CSRFToken}}"> 
+                     <div class="form-group mt-3">
+                         <label for="email">Email:</label>
+                         {{with .Form.Errors.Get "email"}}   <!--with is a golang template directive ,this  gets access to the errors object from the forms.go -->
+                             <label class="text-danger">{{.}}</label>
+                         {{end}}
+                         <input class="form-control {{with .Form.Errors.Get "email"}} is-invalid {{end}}"
+                                id="email" autocomplete="off" type='email'
+                                name='email' value="" required>
+                     </div>
+         
+                     <div class="form-group ">
+                         <label for="password">Password:</label>
+                         {{with .Form.Errors.Get "password"}}   <!--with is a golang template directive ,this  gets access to the errors object from the forms.go -->
+                             <label class="text-danger">{{.}}</label>
+                         {{end}}
+                         <input class="form-control {{with .Form.Errors.Get "password"}} is-invalid {{end}}"
+                                id="password" autocomplete="off" type='password'
+                                name='password' value="" required>
+                     </div>
+   
+                     <hr>
+                     <!--submit button-->
+                        <input type="submit" class="btn btn-primary" value="SignUp">
+                      </form>
+   
+                   </div>
+                 </div>
+             </div>
+   
+             {{block "js" .}}
+             {{end}}
+           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+   
+          //handling the displaying of messages on each page based on the template data
+           //with gets the objects 
+           {{with .Error}}
+           notify("{{.}}", "error")
+           {{end}}
+   
+           {{with .Flash}}
+           notify("{{.}}", "success")
+           {{end}}
+   
+           {{with .Warning}}
+           notify("{{.}}", "warning")
+           {{end}}
+           
+           
+           </script>
        </body>
        </html>
 {{end}}  
