--- a/templates/home.html
+++ b/templates/home.html
@@ -27,13 +27,16 @@
                                     <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">SignUp</span></a>
                             </li>
 
-                            <!--If user is authenticated it diaplays User Dashboard-->
-                            <!--calls the is authenticated from the template data-->
-                            <li class="nav-item">
+                            <li>
+                                <a href="/login" class="nav-link px-0 align-middle">
+                                    <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Login</span></a>
+                            </li>
+
+                            <!-- <li class="nav-item">
                                 {{if eq .IsAuthenticated 1}}
                                 <li class="dropdown pb-4">
                                     <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle"> -->
+                                        <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle"> 
                                         <span class="d-none d-sm-inline mx-1">User</span>
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
@@ -47,54 +50,11 @@
                                     </ul>
                                 </li> 
                                 {{else}} 
-                                <!--if not authenticated it diplays Login Dashboard--> 
-                                <li>
-                                    <a href="/login" class="nav-link px-0 align-middle">
-                                        <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Login</span></a>
-                                </li>
+                                if not authenticated it diplays Login Dashboard 
+                               
                                {{end}} 
-                            </li> 
-        
-<!--                                
-                            <li>
-                                <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                                    <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Dashboard</span> </a>
-                                <ul class="collapse show nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
-                                    <li class="w-100">
-                                        <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1 </a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2 </a>
-                                    </li>
-                                </ul>
-                            </li>
-                        
-                        
-                            <li>
-                                <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                                    <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Products</span> </a>
-                                    <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
-                                    <li class="w-100">
-                                        <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 1</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 2</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 3</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 4</a>
-                                    </li>
+                            </li>  -->
 
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0 align-middle">
-                                    <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Customers</span> </a>
-                            </li>
-                        </ul>
-                        <hr>-->
                       
                     </div> 
                 </div>
@@ -116,11 +76,11 @@
                 <div class="card" style="width: 30rem; height: 30rem; float:right;">
                         <img src="static/images/lady-writing.jpg" class="card-img-top" alt="lady writing">
                        
-                </div> 
+                </div>  
 
                   <style>
                     .card{
-                        width: 700px;
+                        width: 600px;
                     }
                   </style>
                  
@@ -133,9 +93,6 @@
                         <p class="card-text">Click Below to View Content</p>
                         <a href="/get-contents" class="btn btn-primary">View Content</a>
                     </div>
-
-                   
-            
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
