--- a/templates/login.html
+++ b/templates/login.html
@@ -23,6 +23,7 @@
                             <a href="/" type="button" class="btn btn-dark" >Home</a>
                      </div>
                      
+                 {{ template "messages" . }} 
                      <form method="post" action="/login" novalidate> <!--no validate wont validate until the parameters based in forms.go (email) are met  -->
                             <!-- <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">  -->
                             <div class="form-group mt-3">
@@ -60,15 +61,7 @@
        
               //handling the displaying of messages on each page based on the template data
               //with gets the objects 
-              {{with .Error}}
-              notify("{{.}}", "error")
-              {{end}}
-       
-             
-              {{with .Warning}}
-              notify("{{.}}", "warning")
-              {{end}}
-              
+           
               
               </script>
               </body>
