--- a/templates/signup.html
+++ b/templates/signup.html
@@ -36,6 +36,26 @@
                                 id="email" autocomplete="off" type='email'
                                 name='email' value="" required>
                     </div>
+
+                    <div class="form-group ">
+                        <label for="firstname">FirstName:</label>
+                        {{with .Form.Errors.Get "password"}}   <!--with is a golang template directive ,this  gets access to the errors object from the forms.go -->
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input class="form-control {{with .Form.Errors.Get "firstname"}} is-invalid {{end}}"
+                                id="firstname" autocomplete="off" type='firstname'
+                                name='firstname' value="" required>
+                    </div>
+
+                    <div class="form-group ">
+                        <label for="lastname">LastName:</label>
+                        {{with .Form.Errors.Get ""}}   <!--with is a golang template directive ,this  gets access to the errors object from the forms.go -->
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input class="form-control {{with .Form.Errors.Get "lastname"}} is-invalid {{end}}"
+                                id="lastname" autocomplete="off" type='lastname'
+                                name='lastname' value="" required>
+                    </div>
         
                     <div class="form-group ">
                         <label for="password">Password:</label>
