adjsting jwt, handlers and routes

--- a/templates/home-content.html
+++ b/templates/home-content.html
@@ -30,7 +30,7 @@
                                 <span class="d-none d-sm-inline mx-1">User</span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-                                <li><a class="dropdown-item" href="#">Profile</a></li>
+                                <li><a class="dropdown-item" href="/user/userprofile">Profile</a></li>
                                
                                 <li><a class="dropdown-item" href="#">Sign out</a></li>
                             </ul>
@@ -45,12 +45,14 @@
             <div class="col py-3">
 
             <div> 
-            <label for="exampleDataList" class="form-label">Datalist example</label>
+            <label for="exampleDataList" class="form-label">Search Contents</label>
             <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
             <datalist id="datalistOptions">
             <option value="">
             </datalist>
-        </div>    
+        </div>  
+        
+        
         </div>
         </div>
     </div>
