--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
                             </li>
 
                             <li>
-                                <a href="/login" class="nav-link px-0 align-middle">
+                                <a href="/post/login" class="nav-link px-0 align-middle">
                                     <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Login</span></a>
                             </li>
 
